kubernetes/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: dev

spec:
  ingressClassName: traefik

  rules:
  - host: nginx.home.local
  
    http:
      paths:
        - path: /
          pathType: Prefix
          
          backend:
            service:
              name: nginx
              port:
                number: 80
